kubernetes/apps/security/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: security-allow
spec:
  endpointSelector: {}
  ingress:
    # Envoy Gateway (HTTPRoutes)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    # VictoriaMetrics/vmagent scraping ServiceMonitors
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
    # authentik SMTP relay + outbound webhooks
    - toEntities:
        - world
    - toEntities:
        - kube-apiserver
